# cpp-tasm

./: CMakeLists.txt  README.md  computer.h  computer_example.cc  pytania_i_TODO  test.sh  test1.cc
compilation_fail/badocha/: fail_l_and.cc  fail_l_mov.cc  fail_l_not.cc  fail_lea.cc  fail_undeclared_lea.cc  too_many.cc
compilation_fail/przytula/: test_D_syntax1.cc  test_bad_syntax1.cc  test_syntax4.cc  test_syntax6.cc
desc/: computer_kryteria.txt  computer_tresc.txt
infinite_loop/przytula/: test_finite_loop.cc
tests/: ._test.sh  computer_tests.cc  computer_tests_fb.cc  test.sh
tests/compilation_fail/badocha/: ._fail_not_pvalue.cc  fail_id.cc  fail_l_add.cc  fail_l_dec.cc  fail_l_inc.cc  fail_l_or.cc  fail_l_sub.cc  fail_mem.cc  fail_not_pvalue.cc  fail_num.cc  too_many_same_name.cc
tests/compilation_fail/przytula/: bad_program.cc  test_D_syntax2.cc  test_bad_id1.cc  test_bad_id2.cc  test_infinite_loop.cc  test_size1.cc  test_syntax1.cc  test_syntax2.cc  test_syntax3.cc  test_syntax5.cc
tests/compilation_success/przytula/: ._test_declarations.cc  ._test_empty.cc  ._test_jumps.cc  test_declarations.cc  test_empty.cc  test_jumps.cc
tests/infinite_loop/przytula/: ._test_finite_loop.cc  ._test_id1.cc  ._test_underflow_res.cc  test_finite_loop.cc  test_id1.cc  test_underflow_res.cc
